2007-12-30  Matthias Clasen  <mclasen@redhat.com> 

	* gfileinfo.c: Expand the long description.

2007-12-30  Matthias Clasen  <mclasen@redhat.com> 

	* fam/Makefile.am:
	* inotify/Makefile.am: Use GLIB_DEBUG_FLAGS. This should
	fix builds with --disable-visibility.  (#500273, Christian Persch)

2007-12-30  Matthias Clasen  <mclasen@redhat.com> 

	* gdesktopfileinfo.c (g_app_info_get_all): Don't include NULLs
	in the list of returned app infos.

2007-12-30  Matthias Clasen  <mclasen@redhat.com> 

	* gappinfo.c: Fix a cross-reference

2007-12-30  Matthias Clasen  <mclasen@redhat.com> 

	* gfileinputstream.c:
	* gfileoutputstream.c:
	* gloadableicon.h:
	* gunixmounts.c:
	* gmount.h:
	* gdesktopappinfo.c:
	* gvolumemonitor.c: 
	* gfileinfo.c: Documentation updates.

2007-12-26  Matthias Clasen  <mclasen@redhat.com> 

	* gdesktopappinfo.c: Include crt_externs.h.  (#505730,
	Tommi Komulainen)

2007-12-26  Matthias Clasen  <mclasen@redhat.com> 

	* gcontenttype.c (g_content_types_get_registered): Don't return
	freed memory (#505815, Mikael Hermansson)

2007-12-25  Paolo Borelli  <pborelli@katamail.com>

	* glocalfileinfo.c (set_info_from_stat): fix typo in the ifdef
	used to detect statbuf->st_blocks. (#505042)

2007-12-24  Matthias Clasen  <mclasen@redhat.com>

	* gdesktopappinfo.c (g_desktop_app_info_launch): Fix the
	environment handling.  (#504829, Cosimo Cecchi)

2007-12-22  Matthias Clasen  <mclasen@redhat.com>

	* gappinfo.c: Doc improvements
	
	* gdesktopappinfo.c (g_app_info_get_all): Return app infos,
	not ids.

2007-12-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.0 ===

2007-12-20  Hans Breuer  <hans@breuer.org>

	* makefile.msc : don't build gdesktopappinfo.obj, it collides 
	with symbols gwin32appinfo.obj, added gmount.obj
	* gio.symbols : mark g_desktop_app_* as G_OS_UNIX

2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
        * gfileattribute.c:
        * gfileinfo.c:
        * gfileinfo.h: